--- a/build.xml
+++ b/build.xml
@@ -76,12 +76,12 @@
 
     <target name="dist" depends="jar">
         <mkdir dir="build/dist/lib"/>
-        <mkdir dir="build/dist/web/taakapp"/>
+        <mkdir dir="build/dist/web"/>
         <mkdir dir="build/dist/conf"/>
         <copy todir="build/dist/lib" file="build/taakapp.jar"/>
         <copy todir="build/dist/conf" file="conf/taakapp.conf"/>
-        <copy todir="build/dist/web/taakapp">
-            <fileset dir="src/web/taakapp"/>
+        <copy todir="build/dist/web">
+            <fileset dir="src/web"/>
         </copy>
     </target>
 
@@ -93,13 +93,31 @@
         </copy>
     </target>
 
+    <target name="alpha" depends="init">
+        <copy todir="${install.dir}/lib" file="build/dist/lib/taakapp.jar"/>
+        <copy todir="${install.dir}/conf" file="build/dist/conf/taakapp.conf"/>
+        <delete dir="${install.dir}/websites/taakapp"/>
+        <copy todir="${install.dir}/websites/taakapp">
+            <fileset dir="build/dist/web/alpha"/>
+        </copy>
+    </target>
+
+    <target name="beta" depends="init">
+        <copy todir="${install.dir}/lib" file="build/dist/lib/taakapp.jar"/>
+        <copy todir="${install.dir}/conf" file="build/dist/conf/taakapp.conf"/>
+        <delete dir="${install.dir}/websites/taakapp"/>
+        <copy todir="${install.dir}/websites/taakapp">
+            <fileset dir="build/dist/web/beta"/>
+        </copy>
+    </target>
+
     <target name="test" depends="compile, compile-test">
         <taskdef name="scalatest" classname="org.scalatest.tools.ScalaTestAntTask" classpathref="test.classpath"/>
         <scalatest>
             <runpath>
                 <pathelement path="test.classpath"/>
             </runpath>
-            <suite classname="com.kalrsn.fidofinder.FlyerCacheSuite"/>
+            <suite classname="com.kalrsn.taakapp.TaskCacheSuite"/>
             <reporter type="stdout"/>
         </scalatest>
     </target>
