--- a/conf/taakapp.conf
+++ b/conf/taakapp.conf
@@ -1,4 +1,6 @@
 taak.dburl=jdbc:postgresql://localhost:5432/taak
 taak.dbuser=taak
 taak.dbpassword=boontjes47
-
+app.name=taakapp
+install.dir=/opt/ninthdrug
+default.web=alpha
