show the tables above the menu

--- a/conf/taakapp.conf
+++ b/conf/taakapp.conf
@@ -1,6 +1,6 @@
 taak.dburl=jdbc:postgresql://localhost:5432/taak
 taak.dbuser=taak
-taak.dbpassword=boontjes47
+taak.dbpassword=passwerd
 app.name=taakapp
 install.dir=/opt/ninthdrug
 default.web=alpha
